--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "^3.3.0",
     "element-ui": "^2.15.0",
     "html2canvas": "^1.0.0-rc.7",
+    "js-cookie": "^2.2.1",
     "jspdf": "^2.3.0",
     "lodash": "^4.17.21",
     "markdown": "^0.5.0",
@@ -57,6 +58,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@types/crypto-js": "^4.0.1",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
@@ -72,7 +74,7 @@
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "problem": "^0.0.0",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^7.0.0",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0"
