--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@toast-ui/editor-plugin-table-merged-cell": "^1.3.2",
     "@toast-ui/editor-plugin-uml": "^1.0.0",
     "@toast-ui/vue-editor": "^2.5.1",
+    "@types/validator": "^13.1.3",
     "core-js": "^3.8.3",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.3.0",
@@ -45,6 +46,7 @@
     "markdown": "^0.5.0",
     "nuxt": "^2.14.12",
     "qs": "^6.9.6",
+    "validator": "^13.5.2",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vuex-module-decorators": "^1.0.1"
