--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@toast-ui/editor-plugin-uml": "^1.0.0",
     "@toast-ui/vue-editor": "^2.5.1",
     "@types/validator": "^13.1.3",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.8.3",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.3.0",
@@ -59,6 +60,7 @@
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^4.0.1",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
