--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
+    "analyze": "npx nuxt build --analyze",
     "lint:js": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
-    "lint-fix": "eslint --fix --ext .ts --ext .js --ext .jsx --ext .vue src/"
+    "lint-fix": "eslint --fix --ext .ts --ext .js --ext .jsx --ext .vue src/",
+    "pm2start":"pm2 start npm --name blogssr -- start",
+    "pm2stop":"pm2 stop blogssr",
+    "pm2delete":"pm2 delete blogssr",
+    "pm2restart":"pm2 restart blogssr"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
@@ -46,6 +51,7 @@
     "lodash": "^4.17.21",
     "markdown": "^0.5.0",
     "nuxt": "^2.14.12",
+    "pm2": "^4.5.5",
     "qs": "^6.9.6",
     "validator": "^13.5.2",
     "vue-class-component": "^7.2.6",
