--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
     "lint-fix": "eslint --fix --ext .ts --ext .js --ext .jsx --ext .vue src/",
-    "pm2start":"pm2 start npm --name blogssr -- start",
-    "pm2stop":"pm2 stop blogssr",
-    "pm2delete":"pm2 delete blogssr",
-    "pm2restart":"pm2 restart blogssr"
+    "pm2start": "pm2 start npm --name blogssr -- start",
+    "pm2stop": "pm2 stop blogssr",
+    "pm2delete": "pm2 delete blogssr",
+    "pm2restart": "pm2 restart blogssr"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
@@ -39,12 +39,15 @@
     "@toast-ui/editor-plugin-table-merged-cell": "^1.3.2",
     "@toast-ui/editor-plugin-uml": "^1.0.0",
     "@toast-ui/vue-editor": "^2.5.1",
+    "@types/highlight.js": "^10.1.0",
+    "@types/highlightjs": "^10.1.0",
     "@types/validator": "^13.1.3",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.8.3",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.3.0",
     "element-ui": "^2.15.0",
+    "highlight.js": "^10.6.0",
     "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.1",
     "jspdf": "^2.3.0",
