--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/highlight.js": "^10.1.0",
     "@types/highlightjs": "^10.1.0",
     "@types/validator": "^13.1.3",
+    "compressorjs": "^1.0.7",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.8.3",
     "cross-env": "^5.2.0",
